# OpenKara

./: .gitignore  .prettierignore  README.md  README_CN.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  (+1 more)
docs/: README.md  architecture.md  development-phases.md  milestones.md  phase-5-performance-baseline.md  project-structure.md  roadmap.md
scripts/: README.md  render-homebrew-cask.sh  run-local-smoke.sh  setup.sh
src/: App.css  App.tsx  README.md  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_stems.sql  003_lyrics.sql  004_portable_paths.sql  005_individual_stem_paths.sql
src-tauri/models/: README.md
src-tauri/src/: config.rs  lib.rs  library_root.rs  main.rs  perf.rs  smoke.rs
src-tauri/src/audio/: README.md  decode.rs  encode.rs  mod.rs  output.rs  playback.rs
src-tauri/src/cache/: lyrics.rs  mod.rs  stems.rs
src-tauri/src/commands/: README.md  bootstrap.rs  error.rs  import.rs  library_setup.rs  lyrics.rs  mod.rs  playback.rs  separation.rs  settings.rs
src-tauri/src/lyrics/: README.md  fetch.rs  lrclib.rs  mod.rs  parser.rs
src-tauri/src/metadata/: README.md  mod.rs
src-tauri/src/separator/: README.md  bootstrap.rs  checkpoint.rs  inference.rs  job.rs  mix.rs  mod.rs  model.rs  preprocess.rs
src-tauri/tests/: README.md  phase1_cache.rs  phase1_import.rs  phase1_metadata.rs  phase2_decode.rs  phase2_output.rs  phase2_playback.rs  phase3_inference.rs  phase3_job.rs  phase3_mix.rs  phase3_model.rs  phase3_playback_mode.rs  phase3_preprocess.rs  phase3_status.rs  phase3_stems_cache.rs  phase4_commands.rs  phase4_fetch.rs  phase4_lrclib.rs  phase4_lyrics_cache.rs  phase4_parser.rs  phase5_errors.rs  phase5_flow.rs  phase5_perf.rs  phase6_local_smoke.rs  phase6_model_bootstrap.rs  support.rs
src-tauri/tests/fixtures/: README.md
src-tauri/tests/fixtures/metadata/: fixture.flac  fixture.m4a
test/: Playboi Carti - Cancun (Sega Version).aac
(+43 files in other folders)
