[package]
name = "openkara"
version = "0.1.0"
description = "OpenKara desktop shell"
authors = ["OpenKara contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openkara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
cpal = "0.15"
hound = "3.5"
lofty = "0.22"
ort = "2.0.0-rc.10"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tauri = { version = "2", features = [] }
